Wed Apr 16 00:47:50 2003  Ossama Othman  <ossama@uci.edu>

	* tao/Acceptor_Registry.h:

	  Include "ace/SStringfwd.h" instead of "ace/SString.h".  Forward
	  declarations of ACE_CString are enough.

Wed Apr 16 00:18:08 2003  Ossama Othman  <ossama@uci.edu>

	* tao/AbstractBase.inl (_is_a):
	* tao/AbstractBase.cpp (_is_a):

	  Uninlined this method.  There wasn't much point in inlining it
	  since it is a virtual method.

	* tao/Any.cpp (create_empty):

	  Marked constant initializer variables as "const".

	* tao/Any_T.cpp:

	  Nuked trailing whitespace.

	* tao/CORBA_String.h:

	  Include "ace/iosfwd.h" instead of "ace/streams.h" to reduce
	  compile times.  Forward declarations are enough.

	* tao/CORBA_String.cpp:
	* tao/Messaging_SyncScopeC.cpp:
	* tao/corbafwd.cpp:

	  Include "ace/OS.h".  Necessitated by above change.

	* tao/Exception.h:

	  Include "ace/SStringfwd.h" and "ace/iosfwd.h" instead of
	  "ace/SString.h".  The latter is more expensive than the former
	  two.

	  Forward declare "ACE_Allocator" class.  Necessitated by above
	  change.

	* tao/GIOP_Message_Generator_Parser.h:
	* tao/Utils/Auto_Functor.h:

	  Include "ace/Global_Macros.h".  Necessitated by header inclusion
	  reductions.

	* tao/IIOP_Connection_Handler.cpp:
	* tao/Object.h:
	* tao/Parser_Registry.h:
	* tao/Queued_Message.h:
	* tao/corbafwd.i:
	* tao/PortableServer/Object_Adapter.h:
	* tao/PortableServer/POA.h:

	  Cosmetic improvements.

	* tao/NVList.h:
	* tao/Object.cpp:
	* tao/Profile.h:

	  Include "ace/Synch.h".  Necessitated by header inclusion
	  reductions.

	* tao/Object_KeyC.cpp:

	  Include "ace/ACE.h".  Necessitated by header inclusion
	  reductions.

	* tao/Transport_Connector.h:
	* tao/Wait_Strategy.h:

	  Forward declare ACE_Time_Value class.  Necessitated by header
	  inclusion reductions.

	* tao/append.cpp (append):

	  Added missing line feed in debugging output.

	* tao/RTCORBA/Private_Transport_Descriptor.h:
